--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.18.1",
+    "@auth/prisma-adapter": "^1.0.6",
+    "@nextui-org/react": "2.2.9",
+    "@prisma/client": "^5.16.2",
+    "framer-motion": "11.3.2",
+    "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.3",
+    "prisma": "^5.16.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
